2008-03-31  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_ctrl.c,
	src/e_ctrl.h: Improve self get and set interface

	* src/e_nav_dbus.c,
	src/e_nav_dbus.h: Improve tag share and sms sending interface

	* src/widgets/e_nav_textedit.c,
	src/widgets/e_nav_textedit.h,
	src/e_nav_item_location.c,
	src/e_mod_nav.c: Add Tag share function

	* src/widgets/e_nav_dialog.c: Don't strdup NULL string

2008-03-30  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_nav_item_location.c,
	  src/widgets/e_nav_textedit.[ch], 
	  data/themes/diversity_nav.edc: Replace the entry with EWL widgets.
	* src/e_mod_nav.c, 
	  src/e_nav_item_neo_other.[ch],
	  src/e_ctr.[ch]: Support bard contacts management. 
	* src/e_nav_item_neo_me.c: Add self properties. 
	* src/e_nav_taglist.[ch]: Add taglist_destroy function.
	* diversity-nav/data/themes/default.edc,
	  src/widgets/Makefile.am,
	  diversity-nav/data/themes/Makefile.am: Remove some unused code, src/widgets/e_box.[ch],
	src/widgets/e_icon.[ch],  data/themes/default_ilist.edc

	* TODO: Complete Tag share function

2008-03-27  Jeremy Chang  <jeremy@openmoko.com>

	* Use EWL widgets in place of e_ilist to make list
	* configure.in: Check EWL
	* src/e_ctrl.c: Modify the type of the listview object
	* src/e_nav_taglist.[ch]: Use EWL embed, scrollpane, tree, etc. to
	make the list 
	* src/e_mod_main.c: Add ewl_init()
	* src/widgets/Makefile.am: Remove e_ilist.[ch] files
	* data/themes/diversity_nav.edc: Add "modules/diversity_nav/taglist"
	group

2008-03-22  Daniel Willman  <daniel@openmoko.org>

	* src/e_mod_nav.c (viewport_object_added): Also monitor GeometryChanged
	signals from other neos
	* src/e_mod_nav.c (on_geometry_changed): The new geometry is sent with the
	signal so just parse them instead of querying.

2008-03-21  Daniel Willman  <daniel@openmoko.org>
	* src/e_nav_item_neo_other.c (e_nav_world_item_neo_other_add): Sign handling
	of latitude is reversed. Fix this here until someone who knows the code can
	do it properly.